crates/toml/tests/snapshots/invalid/float/leading-point-neg.stderr
TOML parse error at line 1, column 21
  |
1 | leading-point-neg = -.12345
  |                     ^
invalid mantissa, expected digits

---
TOML parse error at line 1, column 21
  |
1 | leading-point-neg = -.12345
  |                     ^^^^^^^
invalid float, expected nothing
